Подготовка графики и текстовых стилей личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>О странице</title>
   </head>
   <body>
@@ -66,7 +67,8 @@
       <ul>
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
-        <li>Перфораторы</li>       
+        <li>Перфораторы</li> 
+      </ul>    
     </div>
     <main>
       <h1>Перфораторы</h1>
@@ -128,7 +130,7 @@
           <div class="goods-page-item">
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 3000
@@ -142,7 +144,7 @@
             </div> 
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-6000.jpg" alt="bfg-6000" width="144" height="128">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 6000
@@ -155,10 +157,9 @@
               </div>
             </div> 
             <div class="item">
-              <a href="#"><img src="//placehold.it/10x10" alt="Купить" width="10" height="10">купить</a>
-              <a href="#">в закладки</a>
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <a href="#">купить</a>
+                <a href="#">в закладки</a>
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 2000
@@ -173,7 +174,7 @@
             
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 3000
@@ -187,7 +188,7 @@
             </div> 
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-6000.jpg" alt="bfg-6000" width="144" height="128">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 6000
@@ -201,7 +202,7 @@
             </div> 
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 2000
@@ -216,7 +217,7 @@
             
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 3000
@@ -230,7 +231,7 @@
             </div> 
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-6000.jpg" alt="bfg-6000" width="144" height="128">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 6000
@@ -244,7 +245,7 @@
             </div> 
             <div class="item">
               <div class="item-picture">
-                <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                <img src="img/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
               </div>
               <div class="item-about">
                 Перфоратор BOSCH BFG 2000
@@ -277,10 +278,12 @@
         </p>
       </div>
     </main>
-     <footer>
+    <footer>
       <div class="footer-top">
         <div class="footer-top-one">
-          <div class="logo">ТЕХНОМАРТ</div>
+          <div class="logo">
+            <a href="#"><h1>ТЕХНОМАРТ</h1></a>
+          </div>
           <nav class="footer-top-one-menu">
             <ul>
               <li><a href="#">Компания</a></li>
