--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>О странице</title>
   </head>
   <body>
@@ -129,7 +130,7 @@
             <a href="#">
               <article class="item">
                 <div class="item-picture">
-                  <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                  <img src="img/bfg-9000.jpg" alt="bfg-900" width="184" height="164">
                 </div>
                 <div class="item-about">
                   Перфоратор BOSCH BFG 9000
@@ -147,7 +148,7 @@
             <a href="#">
               <article class="item">
                 <div class="item-picture">
-                  <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                  <img src="img/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
                 </div>
                 <div class="item-about">
                   Перфоратор BOSCH BFG 3000
@@ -165,7 +166,7 @@
             <a href="#">
               <article class="item">
                 <div class="item-picture">
-                  <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                  <img src="img/bfg-6000.jpg" alt="bfg-6000" width="144" height="128">
                 </div>
                 <div class="item-about">
                   Перфоратор BOSCH BFG 6000
@@ -183,16 +184,16 @@
             <a href="#">
               <article class="item new">
                 <div class="item-picture">
-                  <img src="//placehold.it/220x140" alt="" width="220" height="140">
+                  <img src="img/bfg-3000.jpg" alt="bfg-2000" width="127" height="112">
                 </div>
                 <div class="item-about">
-                  Перфоратор BOSCH BFG 9000
+                  Перфоратор BOSCH BFG 2000
                 </div> 
                 <div class="item-cost-old">
-                  32000
+                 
                 </div>
                 <div class="item-cost-new">
-                  25500
+                  12500
                 </div>
               </article> 
             </a>
@@ -207,58 +208,58 @@
         <ul>          
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/bosch.jpg" alt="БОШ" width="126" height="37">
+              </div> 
             </a>
           </li>
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/makita.jpg" alt="Макита" width="123" height="40">
+              </div> 
             </a>
           </li>
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/dewalt.jpg" alt="Диволт" width="146" height="44">
+              </div> 
             </a>
           </li>
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/interskol.jpg" alt="Интерскол" width="200" height="88">
+              </div> 
             </a>
           </li>
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/hitachi.jpg" alt="Хитачи" width="169" height="31">
+              </div> 
             </a>
           </li>
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/lg.jpg" alt="ЛЖ" width="121" height="73">
+              </div> 
             </a>
           </li>
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/aeg.jpg" alt="АЕГ" width="151" height="96">
+              </div> 
             </a>
           </li>
           <li>
             <a href="#">
-              <article class="fabricator-item">
-                  <img src="//placehold.it/220x145" alt="" width="220" height="145">
-              </article> 
+              <div class="fabricator-item">
+                  <img src="img/metabo.jpg" alt="Метабо" width="204" height="69">
+              </div> 
             </a>
           </li>
         </ul>
@@ -285,7 +286,7 @@
               Мы с удовольствие доставим Ваш товар прямо к вашему подъезду совершенно бесплатно!
               Ведь мы не плохо заработаем поднимая его на Ваш этаж!
             </span>  
-            <img src="//placehold.it/210x150" alt="Автодоставка" width="210" height="150">
+            <img src="img/index-delivery.png" alt="Автодоставка" width="468" height="261">
           </div>
         </div>        
       </div>
@@ -310,7 +311,7 @@
         <div class="about-contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать свой товар сами, заехав в наш офис:</p>
-          <img src="//placehold.it/300x160" alt="Карта" width="210" height="150">
+          <img src="img/map.jpg" alt="Карта" width="300" height="158">
           <a href="#">Заблудились? Напишите нам!</a>
         </div>
       </div>
@@ -318,7 +319,9 @@
     <footer>
       <div class="footer-top">
         <div class="footer-top-one">
-          <div class="logo">ТЕХНОМАРТ</div>
+          <div class="logo">
+            <a href="#"><h1>ТЕХНОМАРТ</h1></a>
+          </div>
           <nav class="footer-top-one-menu">
             <ul>
               <li><a href="#">Компания</a></li>
