--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header>
       <div class="info-user">
         <div class="logo">
-          <a href="#"><h1>ТЕХНОМАРТ</h1></a>
+          <a href="index.html"><h1>ТЕХНОМАРТ</h1></a>
         </div>
         <div class="iu-search">
           <label for="in-search">Поиск:</label>    
@@ -52,7 +52,7 @@
         </div>
         <nav class="info-top-menu">
           <ul>
-            <li><a href="#">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="#">Компания</a></li>
             <li><a href="#">Каталог</a></li>
             <li><a href="#">Новости</a></li>
@@ -282,7 +282,7 @@
       <div class="footer-top">
         <div class="footer-top-one">
           <div class="logo">
-            <a href="#"><h1>ТЕХНОМАРТ</h1></a>
+            <a href="index.html"><h1>ТЕХНОМАРТ</h1></a>
           </div>
           <nav class="footer-top-one-menu">
             <ul>
