--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <div class="info-user">
         <div class="logo">
-          <a href="#"><h1>ТЕХНОМАРТ</h1></a>
+          <a href="index.html"><h1>ТЕХНОМАРТ</h1></a>
         </div>
         <div class="iu-search">
           <label for="in-search">Поиск:</label>    
@@ -54,7 +54,7 @@
           <ul>
             <li><a href="#">Главная</a></li>
             <li><a href="#">Компания</a></li>
-            <li><a href="#">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">Спецпредложения</a></li>
             <li><a href="#">Доставка</a></li>
@@ -265,7 +265,7 @@
         </ul>
       </div>
       <div class="services">
-        <div class="services-head>
+        <div class="services-head">
           <h2>Сервисы</h2>
           <span>
             Хороший интернет магазин отличается от плохого не только ценами!<br>
@@ -320,13 +320,13 @@
       <div class="footer-top">
         <div class="footer-top-one">
           <div class="logo">
-            <a href="#"><h1>ТЕХНОМАРТ</h1></a>
+            <a href="index.html"><h1>ТЕХНОМАРТ</h1></a>
           </div>
           <nav class="footer-top-one-menu">
             <ul>
               <li><a href="#">Компания</a></li>
               <li><a href="#">Новости</a></li>
-              <li><a href="#">Каталог</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
               <li><a href="#">Доставка</a></li>
               <li><a href="#">Контакты</a></li>
             </ul>
@@ -348,7 +348,7 @@
       </div>
       <div class="footer-bottom">
         <div class="copyright">
-          &copy 2010-2016 Компания "Техномарт"<br>
+          &amp; copy 2010-2016 Компания "Техномарт"<br>
           Все права защищены
         </div>
         <div class="social">
@@ -358,7 +358,7 @@
           <img src="//placehold.it/40x40" alt="Инстаграм" width="40" height="40">
         </div>
         <div class="feedback">
-          <span>Обратная связь<span><br>
+          <span>Обратная связь</span><br>
           <a href="mailto:mail@htmlacademy.ru">mailto:mail@htmlacademy.ru</a>
         </div>
         <div class="design">
