--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       </div>
       <div class="footer-bottom">
         <div class="copyright">
-          &amp; copy 2010-2016 Компания "Техномарт"<br>
+          &#169; copy 2010-2016 Компания "Техномарт"<br>
           Все права защищены
         </div>
         <div class="social">
