--- a/catalog.html
+++ b/catalog.html
@@ -119,7 +119,8 @@
         </div>
         <div class="goods-page">
           <div class="goods-page-sort">
-            <ul class="gps-select-menu">сортировка
+            <h3>сортировка</h3>
+            <ul class="gps-select-menu">
               <li><a href="#">по цене</a></li>
               <li><a href="#">по типу</a></li>
               <li><a href="#">по функционалу</a></li>
@@ -259,9 +260,9 @@
             </div> 
             
           </div>
-          <div class="goods-page-click">
+          <div class="goods-paginator">
             <ul>
-              <li с><a href="#">1</a><li>
+              <li class="goods-paginator-active"><a href="#">1</a><li>
               <li><a href="#">2</a><li>
               <li><a href="#">3</a><li>
               <li><a href="#">Следующая</a><li>
@@ -310,7 +311,7 @@
       </div>
       <div class="footer-bottom">
         <div class="copyright">
-          &copy 2010-2016 Компания "Техномарт"<br>
+          &#169; 2010-2016 Компания "Техномарт"<br>
           Все права защищены
         </div>
         <div class="social">
@@ -320,7 +321,7 @@
           <img src="//placehold.it/40x40" alt="Инстаграм" width="40" height="40">
         </div>
         <div class="feedback">
-          <span>Обратная связь<span><br>
+          <span>Обратная связь</span><br>
           <a href="mailto:mail@htmlacademy.ru">mailto:mail@htmlacademy.ru</a>
         </div>
         <div class="design">
