Согласно валидатора предупреждения были

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <div class="item-picture">
                   <img src="img/bfg-9000.jpg" alt="bfg-900" width="184" height="164">
                 </div>
-                <div class="item-about">
+                <h3 class="item-about">
                   Перфоратор BOSCH BFG 9000
-                </div> 
+                </h3> 
                 <div class="item-cost-old">
                   32000
                 </div>
@@ -150,9 +150,9 @@
                 <div class="item-picture">
                   <img src="img/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
                 </div>
-                <div class="item-about">
+                <h3 class="item-about">
                   Перфоратор BOSCH BFG 3000
-                </div> 
+                </h3> 
                 <div class="item-cost-old">
                   22500
                 </div>
@@ -168,9 +168,9 @@
                 <div class="item-picture">
                   <img src="img/bfg-6000.jpg" alt="bfg-6000" width="144" height="128">
                 </div>
-                <div class="item-about">
+                <h3 class="item-about">
                   Перфоратор BOSCH BFG 6000
-                </div> 
+                </h3> 
                 <div class="item-cost-old">
                   30500
                 </div>
@@ -186,9 +186,9 @@
                 <div class="item-picture">
                   <img src="img/bfg-3000.jpg" alt="bfg-2000" width="127" height="112">
                 </div>
-                <div class="item-about">
+                <h3 class="item-about">
                   Перфоратор BOSCH BFG 2000
-                </div> 
+                </h3> 
                 <div class="item-cost-old">
                  
                 </div>
@@ -348,7 +348,7 @@
       </div>
       <div class="footer-bottom">
         <div class="copyright">
-          &#169; copy 2010-2016 Компания "Техномарт"<br>
+          &#169; 2010-2016 Компания "Техномарт"<br>
           Все права защищены
         </div>
         <div class="social">
