--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slider.css">
+    <!--<link rel="stylesheet" href="css/header.css">    
     <link rel="stylesheet" href="css/item.css">
     <link rel="stylesheet" href="css/top-catalog.css">
     <link rel="stylesheet" href="css/delivery.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/footer.css">-->
     <title>Техномарт</title>
   </head>
   <body>
