--- a/index.html
+++ b/index.html
@@ -60,16 +60,20 @@
             <!--Форма логина-->
             <div class="lp-login">
               <div class="lp-login-registr clearfix">
-                <a class="lp-login-enter" href="#"><i class="icon-login"></i>Войти</a>
-                <a class="lp-login-checkin" href="#">Регистрация</a>
-              </div>
-              <div class="lp-login-user-panel  not-visible">
-                <div class="account-menu-user-panel"><a href="#" class="account-menu-exit"><i class="icon-user"></i>Равшан Джамшутович<i class="icon-logout"></i></a></div>
-                  <div class="account-menu-user-links">
-                    <a href="#">Мои заказы</a>
-                    <span class="point"></span>
-                    <a href="#">Личный кабинет</a>
-                  </div>
+                <div class="lp-login-enter" href="#"><i class="icon-login"></i>Войти</div>
+                <div class="lp-login-checkin" href="#">Регистрация</div>
+              <!--</div>
+              <div class="lp-login-user-panel  not-visible">-->
+                <div class="account-menu-user-panel">
+                  <a href="#" class="account-menu-exit not-visible">
+                  <i class="icon-user"></i>Равшан Джамшутович<i class="icon-logout"></i>
+                  </a>
+                </div>
+                <div class="account-menu-user-links not=visible">
+                  <a href="#">Мои заказы</a>
+                  <span class="point"></span>
+                  <a href="#">Личный кабинет</a>
+                </div>
               </div>
             </div>
             <!--<div class="account-menu">
