#33 Завершаем вёрстку личного проекта #4
Поправил расположение некоторых элементов

--- a/catalog.html
+++ b/catalog.html
@@ -79,10 +79,9 @@
           </div>         
           <nav>
             <ul class="nav-top-menu">
-              <li><span>Главная</span></li>
-              <!-- в активном пукте меню заменяем a на span на всех страницах. Так как пункт меню не должен быть ссылкой на самого себя -->
+              <li><a href="index.html">Главная</a></li>
               <li><a href="#">Компания</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
+              <li><span>Каталог</span></li>
               <li><a href="#">Новости</a></li>
               <li><a href="#">Спецпредложения</a></li>
               <li><a href="#">Доставка</a></li>
