--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
                 <div class="lp-login-checkin" href="#">Регистрация</div>
               <!--</div>
               <div class="lp-login-user-panel  not-visible">-->
-                <div class="account-menu-user-panel">
-                  <a href="#" class="account-menu-exit not-visible">
+                <div class="account-menu-user-panel not-visible">
+                  <a href="#" class="account-menu-exit">
                   <i class="icon-user"></i>Равшан Джамшутович<i class="icon-logout"></i>
                   </a>
                 </div>
+               
                 <div class="account-menu-user-links not=visible">
                   <a href="#">Мои заказы</a>
                   <span class="point"></span>
