--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             </p>            
           </div>
           <div class="services-slider">
-            
+            <div class="shadow-menu"></div>
             <input type="radio" name="services-slider" id="delivery" checked="checked">
             <label for="delivery">Доставка</label>
             <div class="services-slider-content delivery">
