Правки для себя.

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <!--Форма логина-->
             <div class="lp-login">
               <div class="lp-login-registr clearfix">
-                <div class="lp-login-enter" href="#"><i class="icon-login"></i>Войти</div>
-                <div class="lp-login-checkin" href="#">Регистрация</div>
+                <div class="lp-login-enter"><i class="icon-login"></i>Войти</div>
+                <div class="lp-login-checkin">Регистрация</div>
               </div>
               <div class="lp-login-user-panel  not-visible">
                 <div class="account-menu-user-panel">
-                  <a href="#" class="account-menu-exit">
+                  <a class="account-menu-exit">
                     <i class="icon-user"></i>Равшан Джамшутович<i class="icon-logout"></i>
                   </a>
                 </div>
